--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,7 +3,7 @@
 body {
 	width: 960px;
 	margin: 0px;
-	background-image: url("../Images/BinarySmall.jpg");
+	background-image: url("../Images/Binary_BkgndColr.jpg");
 }
 
 }
