--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,345 +1,876 @@
-
-
-body {
-	width: 960px;
-	margin: 0px;
-	background-image: url("../Images/Binary_BkgndColr.jpg");
+* {
+    margin: 0;
+    padding: 0;
 }
 
+/* // Extra small devices (portrait phones, less than 640px) */
+@media (max-width: 639.98px) { 
+
+body, html {
+    background: url("../../assets/Images/Binary_BkgndColr.jpg");
+    font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    height:100vh;
+    position: relative;
+    text-align: center;
+    max-width: 640px;
+    min-width: 390px;
 }
 
-h1, h2 {
-	font-family: 'Georgia', Times, Times New Roman, serif;
+h1 {
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+    text-align: center;
+    white-space: nowrap;
+    padding: 20px 0;
+    margin-bottom: 2px;
 }
 
-p, ul, input, label, footer {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 16px;
+#navul {
+    margin-right: auto;
+}
+
+.navBarBg {
+    background: #ffffff;
+    width: 100%;
+    height: 89.5px;
+    border-bottom: 1.5px solid #cccccc;
+    display: block;
+}
+
+.box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.container {
+    max-width: 640px;
+    height: 100%;
+    margin: auto;
 }
 
 header {
-	background-color: white;
-	overflow: hidden;
-	width: 100%;
-	height: 120px;
-	border-bottom: 10px solid #dddddd;
+    max-width: 640px;
+    height: 80px;
 }
 
+.title1 {
+    background: #4aaaa5;
+    position: relative;
+    max-width: 640px;
+}
+
+.title2 {
+    background: #4aaaa5;
+    color: #ffffff;
+    font-weight: bold;
+    max-width: 640px;
+}
+
+#nav {
+    background: #ffffff;
+}
+nav {
+    margin: auto;
+    padding: 30px 0;
+}
+
+ul {
+    text-align: center;
+    margin: auto;
+} 
+
+.nav li {
+    display: inline-block;
+}
+
+.liFirst a {
+    border-right: 1px solid #777777;
+    text-decoration: none;
+    color: #777777;
+    padding: 0 5px 0 0;
+}
+
+.liLast a {
+    border: 0;
+    text-decoration: none;
+    color: #777777;
+}
+
+.spacer1 {
+    height: 90px;
+}
+
+main {
+    background: #ffffff;
+    color: #777777;
+    width: auto;
+    height: auto;
+    margin-bottom: 100px;
+}
+
+.contenthead {
+    text-align: center;
+    color: #4aaaa5;
+}
+
+.contentbody {
+    border-top: 3px solid #dddddd;
+    padding: 20px 0 0 0;
+    height: 100%;
+    text-align: center;
+}
+
+#imgMain {
+    margin: auto;
+    width: 300px;
+    
+}
+
+p {
+    line-height: 2;
+    text-align: center;
+}
+
+#tk {
+    text-align: center;
+}
+
+input {
+    width: 97.5%;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border: 1px solid #dddddd;    
+}
+
+textarea {
+    width: 97.5%;
+    height: 180px;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border-top: 1px solid #dddddd;
+}
+
+button {
+    border-style: none;
+    height: 40px;
+    width: 110px;
+    background: #4aaaa5;
+    color: #ffffff;
+    font-size: 20px;
+    cursor: pointer;
+    margin-right: 40px;
+}
+ 
+footer {
+    border-top: 4px solid #4AAAA5;
+    background: #666666;
+    color: #ffffff;
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+}
+
+.bottom {
+    color: #c1c1c1;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    margin: 0 0 5px 0;
+}
+
+.grid-container {
+    display: grid;
+    padding: 0 0 20px 0;
+    grid-column-gap: 40px;
+    grid-row-gap: 40px;
+}
+
+.imgs {
+    height: 205px;
+    width: 274px;
+    color: #ffffff;
+    font-size: 22px;
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+    text-align: center;
+}
+
+.imgTag {
+    padding-top: 153px;
+}
+
+#img1 {
+    background-image: url(../images/img01.jpg);
+  margin: auto;
+}
+
+#img2 {
+    background-image: url(../images/img02.jpg);
+    margin: auto;
+
+}
+
+#img4 {
+    background-image: url(../images/img03.jpg);
+    margin: auto;
+}
+
+#img5 {
+    background-image: url(../images/img04.jpg);
+    margin: auto;
+}
+
+#img7 {
+    background-image: url(../images/img05.jpg);
+    margin: auto;
+}    
+ }
+
+
+ 
+/* //////////////////////////////////////////////////////////////// */
+
+/* // Small devices (landscape phones, 640px and up) */
+@media (min-width: 640px) and (max-width: 767.98px) { 
+
+body, html {
+    background: url("../../assets/Images/Binary_BkgndColr.jpg");
+    font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    height:100vh;
+    position: relative;
+    text-align: center;
+    max-width: 768px;
+}
 
 h1 {
-	float: left;
-	display: inline-block;
-	margin-top: 50px;
-	margin-left: 30px;
-	margin-bottom: 0;
-	background-color: #4aaaa5;
-	color: white;
-	padding: 20px;
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+    white-space: nowrap;
 }
 
-.topnav {
-    background-color: #ffffff;
-    padding: 0;
-    font-weight: bold;
-	width: 100%;
-	margin: 0;
+#navul {
+    margin-right: auto;
 }
 
-.topnav ul {
-	list-style: none;
-	height: auto;
-	overflow: hidden;
-	padding: 20px;
-	
+.navBarBg {
+    background: #ffffff;
+    width: 100%;
+    height: 80px;
+    border-bottom: 1.5px solid #cccccc;
+ 
 }
 
-
-.topnav li {
-	float: right;
-	
+.box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
 }
-
-.topnav a {
-	display: inline-block;
-	color: darkgrey;
-	text-align: center;
-	padding: 40px 16px 16px 14px;
-	text-decoration: none;
-}
-
-.topnav li:hover {
-	display: block;
-	background-color: #4aaaa5;
-		
-}
-
-.topnav li a:visited {
-	display: block;
-	background-color: grey;
-	color: teal;
-}
-
 
 .container {
-	width: 960px;
-	margin-top: 30px;
-	box-sizing: content-box;
+    max-width: 768px;
+    height: 100%;
+    margin: auto;
 }
 
-h2 {
-	color: #4aaaa5;
-	font-size: 28px;
+header {
+    max-width: 768px;
+    height: 80px;
+    margin: auto;
 }
 
-hr {
-	display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.7em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 1px;
-    color: #ddddd;
+.title1 {
+    background: #4aaaa5;
+    float: left;
+    height: 100%;
 }
 
-
-img {
-	float: left;
-	margin-right: 20px;
-	
+.title2 {
+    color: #ffffff;
+    font-weight: bold;
+    margin: 20px;
+    
 }
 
-#main-bio {
-	overflow: hidden;
-	width: 550px;
-	height: auto;
-	border: #4aaaa5;
-	background-color: white;
-	margin: 30px 20px 50px 30px;
-	padding: 10px 20px 10px 30px;
+.nav ul {
+    margin: 0;
+    padding: 30px 0 30px 30px;
+    float: right;
 }
 
-#contactform {
-	overflow: hidden;
-	width: 550px;
-	height: auto;
-	border: #4aaaa5;
-	background-color: white;
-	margin: 30px 20px 50px 30px;
-	padding: 10px 20px 10px 30px;
-}
-
-.aside {
-	float: right;
-	display: block;
-	width: 270px;
-	height: 150px;
-	background: #ffffff;
-	margin-top: 30px;
-	margin-left: 30px;
-	padding: 10px;
-	text-align: center;
-}
-
-
-#socialmedia {
-	padding: 0px 30px;
-}
-
-input[type=text], select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+.nav li {
     display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
 }
 
-input[type=submit] {
-    width: 25%;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.liFirst a {
+    border-right: 1px solid #777777;
+    text-decoration: none;
+    color: #777777;
+    padding: 0 5px 0 0;
 }
 
-input[type=submit]:hover {
-    background-color: #ccc;
+.liLast a {
+    border: 0;
+    text-decoration: none;
+    color: #777777;
 }
 
-#contactform {
-    border-radius: 5px;
-    background-color: white;
+.spacer1 {
+    height: 30px;
+}
+
+main {
+    background: #ffffff;
+    color: #777777;
+    width: auto;
+    height: auto;
     padding: 20px;
+    margin-bottom: 100px;
 }
 
-input [type=text]:focus {
-	border: 3px solid #4aaaa5;
+.contenthead {
+    text-align: left;
+    color: #4aaaa5;
+    padding: 0 0 20px 0;
 }
 
-#message {
-	height: 150px;
-	text-anchor: top;
+.contentbody {
+    border-top: 3px solid #dddddd;
+    padding: 20px 0 0 0;
+    height: 100%;
+    text-align: left;
 }
 
-.container2 {
-	width: 570px;
-	height: auto;
-	margin: 30px;
-	background-color: white;
-	overflow: hidden;
-	box-sizing: content-box;
-	padding: 20px;
+#imgMain {
+    float: left;
+    margin: 0 20px 10px 0;
 }
 
-
-.grid {
-	position: relative;
-
+p {
+    line-height: 2;
+    text-align: left;
 }
 
-/*lego ninja image*/
-.portimages-1 {
-	position: relative;
-	width: 240px;
-	height: 240px;
-	border: 10px;
-	padding: 10px;
-	overflow: hidden;
+#tk {
+    text-align: center;
 }
 
-.center-1 {
-	position: absolute;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	background-color: #4aaaa5;
-	width: 240px;
-	height: 40px;
-	right: 320px;
-    top: 155px;
-    opacity: 0.8;
-	text-align: center;
-	padding-top: 20px;
-	color: white;
-	
+input {
+    width: 97.5%;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border: 1px solid #dddddd;    
 }
 
-/*blue amazon parrot*/
-.portimages-2 {
-	position: relative;
-	width: 240px;
-	height: 240px;
-	border: 10px;
-	padding: 10px;
-	overflow: hidden;
+textarea {
+    width: 97.5%;
+    height: 180px;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border-top: 1px solid #dddddd;
 }
 
-.center-2 {
-	position: absolute;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	background-color: #4aaaa5;
-	width: 240px;
-	height: 40px;
-	left: 290px;
-    top: 155px;
-    opacity: 0.8;
-	text-align: center;
-	padding-top: 20px;
-	color: white;
-	z-index: 1; 
+button {
+    border-style: none;
+    height: 40px;
+    width: 110px;
+    background: #4aaaa5;
+    color: #ffffff;
+    font-size: 20px;
+    cursor: pointer;
+    margin-right: 40px;
 }
-/*orange flowers*/
-.portimages-3 {
-	position: relative;
-	width: 240px;
-	height: 240px;
-	opacity: 0.9;
-	border: 10px;
-	padding: 10px;
-	overflow: hidden;
-}
-
-.center-3 {
-	position: absolute;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	background-color: #4aaaa5;
-	width: 240px;
-	height: 40px;
-	right: 320px;
-    top: 420px;
-    opacity: 0.8;
-	text-align: center;
-	padding-top: 20px;
-	color: white;
-	z-index: 1; 
-}
-
-/*sunset*/
-.portimages-4 {
-	position: relative;
-	width: 240px;
-	height: 240px;
-	opacity: 0.9;
-	border: 10px;
-	padding: 10px;
-	overflow: hidden;
-}
-
-.center-4 {
-	position: absolute;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	background-color: #4aaaa5;
-	width: 240px;
-	height: 40px;
-	left: 290px;
-    top: 420px;
-    opacity: 0.8;
-	text-align: center;
-	padding-top: 20px;
-	color: white;
-	z-index: 1; 
-}
-
-/*clock*/
-.portimages-5 {
-	position: relative;
-	width: 240px;
-	height: 240px;
-	opacity: 0.9;
-	border: 10px;
-	padding: 10px;
-	overflow: hidden;
-}
-
-.center-5 {
-	position: absolute;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	background-color: #4aaaa5;
-	width: 240px;
-	height: 40px;
-	right: 320px;
-    top: 680px;
-    opacity: 0.8;
-	text-align: center;
-	padding-top: 20px;
-	color: white;
-	z-index: 1; 
-}
-
+ 
 footer {
-	clear: all;
-	border-top: 10px solid #4aaaa5;
-	background-color: #666666;
-	padding: 30px 0px 30px 30px;
-	text-align: center;
-	color: white;
-	
+    border-top: 4px solid #4AAAA5;
+    background: #666666;
+    color: #ffffff;
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+}
+
+.bottom {
+    color: #c1c1c1;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    margin: 0 0 5px 0;
+}
+
+.grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    padding: 0 20px 20px 0;
+    grid-column-gap: 30px;
+    grid-row-gap: 40px;
+}
+
+.imgs {
+    height: 205px;
+    width: 250px;
+    color: #ffffff;
+    font-size: 22px;
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+    text-align: center;
+}
+
+.imgTag {
+    padding-top: 153px;
+}
+
+#img1 {
+    background-image: url(../images/img01.jpg);
+}
+
+#img2 {
+    background-image: url(../images/img02.jpg);
+}
+
+#img4 {
+    background-image: url(../images/img03.jpg);
+}
+
+#img5 {
+    background-image: url(../images/img04.jpg);
+}
+
+#img7 {
+    background-image: url(../images/img05.jpg);
+}    
+ }
+
+ 
+/* //////////////////////////////////////////////////////////////// */
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 979.98px) { 
+
+body, html {
+    background: url("../../assets/Images/Binary_BkgndColr.jpg");
+    font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    height:100vh;
+    position: relative;
+    text-align: center;
+    max-width: 980px;
+}
+
+h1 {
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+    white-space: nowrap;
+}
+
+#navul {
+    margin-left: 0;
+}
+
+.navBarBg {
+    background: #ffffff;
+    width: 100%;
+    height: 80px;
+    border-bottom: 1.5px solid #cccccc;
+ 
+}
+
+.box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.container {
+    max-width: 980px;
+    height: 100%;
+}
+
+header {
+    max-width: 980px;
+    height: 80px;
+    margin: auto;
+    
+}
+
+.title1 {
+    background: #4aaaa5;
+    float: left;
+    height: 100%;
+    width: 300px;
+}
+
+.title2 {
+    color: #ffffff;
+    font-weight: bold;
+    margin: 20px;
+    
+}
+
+.nav ul {
+    margin: 0;
+    padding: 30px 0 30px 30px;
+    float: right;
+}
+
+.nav li {
+    display: inline-block;
+}
+
+.liFirst a {
+    border-right: 1px solid #777777;
+    text-decoration: none;
+    color: #777777;
+    padding: 0 5px 0 0;
+}
+
+.liLast a {
+    border: 0;
+    text-decoration: none;
+    color: #777777;
+}
+
+.spacer1 {
+    height: 30px;
+}
+
+main {
+    background: #ffffff;
+    color: #777777;
+    width: auto;
+    height: auto;
+    padding: 20px;
+    margin-bottom: 100px;
+}
+
+.contenthead {
+    text-align: left;
+    color: #4aaaa5;
+    padding: 0 0 20px 0;
+}
+
+.contentbody {
+    border-top: 3px solid #dddddd;
+    padding: 20px 0 0 0;
+    height: 100%;
+    text-align: left;
+}
+
+#imgMain {
+    float: left;
+    margin: 0 20px 10px 0;
+}
+
+p {
+    line-height: 2;
+    text-align: left;
+}
+
+#tk {
+    text-align: center;
+}
+
+input {
+    width: 97.5%;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border: 1px solid #dddddd;    
+}
+
+textarea {
+    width: 97.5%;
+    height: 180px;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border-top: 1px solid #dddddd;
+}
+
+button {
+    border-style: none;
+    height: 40px;
+    width: 110px;
+    background: #4aaaa5;
+    color: #ffffff;
+    font-size: 20px;
+    cursor: pointer;
+    margin-right: 40px;
+}
+ 
+footer {
+    border-top: 4px solid #4AAAA5;
+    background: #666666;
+    color: #ffffff;
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+}
+
+.bottom {
+    color: #c1c1c1;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    margin: 0 0 5px 0;
+}
+
+.grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    padding: 0 0 20px 0;
+    grid-column-gap: 40px;
+    grid-row-gap: 40px;
+}
+
+.imgs {
+    height: 205px;
+    width: 274px;
+    color: #ffffff;
+    font-size: 22px;
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+    text-align: center;
+}
+
+.imgTag {
+    padding-top: 153px;
+}
+
+#img1 {
+    background-image: url(../images/img01.jpg);
+}
+
+#img2 {
+    background-image: url(../images/img02.jpg);
+}
+
+#img4 {
+    background-image: url(../images/img03.jpg);
+}
+
+#img5 {
+    background-image: url(../images/img04.jpg);
+}
+
+#img7 {
+    background-image: url(../images/img05.jpg);
+}    
+ }
+ 
+
+/* //////////////////////////////////////////////////////////////// */
+
+/* // Large devices (desktops, 980px and up) */
+@media (min-width: 980px) {
+
+body, html {
+    background: url("../../assets/Images/Binary_BkgndColr.jpg");
+    font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    height:100vh;
+    position: relative;
+    /* position: fixed; */
+    text-align: center;
+}
+
+h1 {
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+}
+
+#navul {
+    margin-left: auto;
+}
+
+.navBarBg {
+    background: #ffffff;
+    width: 100%;
+    height: 80px;
+    border-bottom: 1.5px solid #cccccc;
+ 
+}
+
+.box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.container {
+    width: 960px;
+    height: 100%;
+    margin: auto;
+}
+
+header {
+    width: 960px;
+    height: 80px;
+    margin: auto;
+}
+
+.title1 {
+    background: #4aaaa5;
+    float: left;
+    height: 100%;
+}
+
+.title2 {
+    color: #ffffff;
+    font-weight: bold;
+    margin: 20px;
+    
+}
+
+.nav ul {
+    margin: 0;
+    padding: 30px 0 30px 30px;
+    float: right;
+}
+
+.nav li {
+    display: inline-block;
+}
+
+.liFirst a {
+    border-right: 1px solid #777777;
+    text-decoration: none;
+    color: #777777;
+    padding: 0 5px 0 0;
+}
+
+.liLast a {
+    border: 0;
+    text-decoration: none;
+    color: #777777;
+}
+
+.spacer1 {
+    height: 30px;
+}
+
+main {
+    background: #ffffff;
+    color: #777777;
+    width: auto;
+    height: auto;
+    padding: 20px;
+    margin-bottom: 100px;
+}
+
+.contenthead {
+    text-align: left;
+    color: #4aaaa5;
+    padding: 0 0 20px 0;
+}
+
+.contentbody {
+    border-top: 3px solid #dddddd;
+    padding: 20px 0 0 0;
+    height: 100%;
+    text-align: left;
+}
+
+#imgMain {
+    float: left;
+    margin: 0 20px 10px 0;
+}
+
+p {
+    line-height: 2;
+    text-align: left;
+}
+
+#tk {
+    text-align: center;
+}
+
+input {
+    width: 97.5%;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border: 1px solid #dddddd;    
+}
+
+textarea {
+    width: 97.5%;
+    height: 180px;
+    margin: 5px 0 20px 0;
+    padding: 10px;
+    border-top: 1px solid #dddddd;
+}
+
+button {
+    border-style: none;
+    height: 40px;
+    width: 110px;
+    background: #4aaaa5;
+    color: #ffffff;
+    font-size: 20px;
+    cursor: pointer;
+    margin-right: 40px;
+}
+ 
+footer {
+    border-top: 4px solid #4AAAA5;
+    background: #666666;
+    color: #ffffff;
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+}
+
+.bottom {
+    color: #c1c1c1;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    margin: 0 0 5px 0;
+}
+
+.grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    padding: 0 0 20px 0;
+    grid-column-gap: 40px;
+    grid-row-gap: 40px;
+}
+
+.imgs {
+    height: 205px;
+    width: 274px;
+    color: #ffffff;
+    font-size: 22px;
+    font-family: 'Georgia', Times, 'Times New Roman', Times, serif;
+    text-align: center;
+}
+
+.imgTag {
+    padding-top: 153px;
+}
+
+#img1 {
+    background-image: url(../images/img01.jpg);
+}
+
+#img2 {
+    background-image: url(../images/img02.jpg);
+}
+
+#img4 {
+    background-image: url(../images/img03.jpg);
+}
+
+#img5 {
+    background-image: url(../images/img04.jpg);
+}
+
+#img7 {
+    background-image: url(../images/img05.jpg);
+}
 }
