--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -203,28 +203,28 @@ footer {
 }
 
 #img1 {
-    background-image: url(../images/img01.jpg);
+    background-image: url(../../assets/Images/img01.jpg);
   margin: auto;
 }
 
 #img2 {
-    background-image: url(../images/img02.jpg);
+    background-image: url(../../assets/Images/img02.jpg);
     margin: auto;
 
 }
 
 #img4 {
-    background-image: url(../images/img03.jpg);
+    background-image: url(../../assets/Images/img03.jpg);
     margin: auto;
 }
 
 #img5 {
-    background-image: url(../images/img04.jpg);
+    background-image: url(../../assets/Images/img04.jpg);
     margin: auto;
 }
 
 #img7 {
-    background-image: url(../images/img05.jpg);
+    background-image: url(../../assets/Images/img05.jpg);
     margin: auto;
 }    
  }
@@ -425,23 +425,23 @@ footer {
 }
 
 #img1 {
-    background-image: url(../images/img01.jpg);
+    background-image: url(../../assets/Images/img01.jpg);
 }
 
 #img2 {
-    background-image: url(../images/img02.jpg);
+    background-image: url(../../assets/Images/img02.jpg);
 }
 
 #img4 {
-    background-image: url(../images/img03.jpg);
+    background-image: url(../../assets/Images/img03.jpg);
 }
 
 #img5 {
-    background-image: url(../images/img04.jpg);
+    background-image: url(../../assets/Images/img04.jpg);
 }
 
 #img7 {
-    background-image: url(../images/img05.jpg);
+    background-image: url(../../assets/Images/img05.jpg);
 }    
  }
 
@@ -641,23 +641,23 @@ footer {
 }
 
 #img1 {
-    background-image: url(../images/img01.jpg);
+    background-image: url(../../assets/Images/img01.jpg);
 }
 
 #img2 {
-    background-image: url(../images/img02.jpg);
+    background-image: url(../../assets/Images/img02.jpg);
 }
 
 #img4 {
-    background-image: url(../images/img03.jpg);
+    background-image: url(../../assets/Images/img03.jpg);
 }
 
 #img5 {
-    background-image: url(../images/img04.jpg);
+    background-image: url(../../assets/Images/img04.jpg);
 }
 
 #img7 {
-    background-image: url(../images/img05.jpg);
+    background-image: url(../../assets/Images/img05.jpg);
 }    
  }
  
@@ -855,22 +855,22 @@ footer {
 }
 
 #img1 {
-    background-image: url(../images/img01.jpg);
+    background-image: url(../../assets/Images/img01.jpg);
 }
 
 #img2 {
-    background-image: url(../images/img02.jpg);
+    background-image: url(../../assets/Images/img02.jpg);
 }
 
 #img4 {
-    background-image: url(../images/img03.jpg);
+    background-image: url(../../assets/Images/img03.jpg);
 }
 
 #img5 {
-    background-image: url(../images/img04.jpg);
+    background-image: url(../../assets/Images/img04.jpg);
 }
 
 #img7 {
-    background-image: url(../images/img05.jpg);
+    background-image: url(../../assets/Images/img05.jpg);
 }
 }
